@@ -31,7 +31,6 @@
 28. Add FlowData() for getting flow thread coordinates as output array?!!
 31. Complex (hex) colors in inline text command (like #{b9} or #{x0000ff})
 32. Gradient for text (glyph-by-glyph) for whole string (not inline) ???
-34. Axis ticks as number+string, which are proportional to factor (like SetTicks('x',M_PI,"\pi");???
 36. Extra markers for '&' and '&#' signs ?!?
 38. Read JPEG files for Background() and mglData::Import()
 43. Spline for HCDT
@@ -69,6 +68,8 @@ C. Translate to Russian everything
 20. Docs about mgl_suppress_warn
 21. Fortran versions for: mgl_data_info, mgl_datas_hdf, mgl_get_fit, mgl_get_mess, mgl_get_plotid
 22. Docs about Polygon, Angle.
+23. Docs about mgl_check_version() and 'version'
+24. Docs about new SetTicks() and mgl_set_ticks_fact*()
 
 ============= UDAV =============
 
